[package]
name = "cosmwasm-xtask"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
test = false
doctest = false

[dependencies]
bip39 = "2.0.0"
ctrlc = "3.4.0"
derive_more = "0.99.17"
hex = "0.4.3"
nanorand = "0.7.0"
once_cell = "1.18.0"
prost = "0.11.9"
serde = { version = "1.0.164", features = [ "derive" ] }
serde-aux = "4.2.0"
serde_json = "1.0.99"
thiserror = "1.0.40"
xshell = "0.2.3"

[dev-dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.10", features = ["derive"] }
cw20 = "1.1.0"
cw20-base = { version = "1.1.0", features = ["library"] }
